--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "git@github.com:ArkEcosystem/ark-explorer.git"
   },
   "private": true,
-  "author": "Boris Povod <boris@crypti.me>, Oliver Beddows <oliver@lisk.io>,  Guillaume Verbal <doweig@ark.io>",
+  "author": "Boris Povod <boris@crypti.me>, Oliver Beddows <oliver@lightcurve.io>, Mariusz Serek <mariusz@serek.net>, Isabella Dell <isabella@lightcurve.io >, Guillaume Verbal <doweig@ark.io>",
   "license": "MIT",
   "main": "app.js",
   "scripts": {
