--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "bpl-explorer",
-  "version": "0.2.0",
-  "description": "BPL blockchain explorer",
+  "name": "explorer",
+  "version": "0.2.1",
+  "description": "WBX blockchain explorer",
   "repository": {
     "type": "git",
     "url": "git@github.com/blockpool-io/BPL-explorer"
