--- a/package.json
+++ b/package.json
@@ -22,15 +22,16 @@
     "compression": "^1.6.2",
     "express": "^4.14.0",
     "hiredis": "^0.5.0",
+    "is-domain-name": "^1.0.1",
     "method-override": "^2.3.4",
     "moment": "^2.15.1",
     "morgan": "^1.7.0",
+    "popsicle": "=8.2.0",
     "redis": "^2.6.2",
     "request": "^2.75.0",
     "serve-index": "^1.8.0",
     "socket.io": "^1.4.8",
-    "underscore": "^1.8.3",
-    "popsicle": "=8.2.0"
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "bower": "^1.7.9",
